generator client {
  provider      = "prisma-client-js"
  output        = "../generated/prisma"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id            Int             @id @default(autoincrement())
  username      String          @unique
  password      String
  firstName     String          @map("first_name") @db.VarChar(40)
  lastName      String?         @map("last_name") @db.VarChar(40)
  phone         String          @unique @db.VarChar(20)
  verified      Boolean         @default(false)
  archived      Boolean         @default(false)
  createdAt     DateTime        @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt     DateTime        @updatedAt @map("updated_at") @db.Timestamp(0)
  role          Role            @default(WORKER)
  specialtyId   Int?            @map("specialty_id")
  specialty     Specialty?      @relation(fields: [specialtyId], references: [id])
  appointments  Appointment[]
  workerService WorkerService[]
  tokens        Token[]

  @@map("user")
}

model Client {
  id           Int           @id @default(autoincrement())
  phone        String        @unique @db.VarChar(40)
  name         String        @db.VarChar(40)
  createdAt    DateTime      @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt    DateTime      @updatedAt @map("updated_at") @db.Timestamp(0)
  blocked      Boolean       @default(false)
  appointments Appointment[]

  @@map("client")
}

model Service {
  id            Int             @id @default(autoincrement())
  name          String          @unique @db.VarChar(40)
  price         Int
  desc          String?
  duration      Int
  createdAt     DateTime        @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt     DateTime        @updatedAt @map("updated_at") @db.Timestamp(0)
  category      Category        @relation(fields: [categoryId], references: [id])
  categoryId    Int
  appointments  Appointment[]
  workerService WorkerService[]

  @@map("services")
}

model Category {
  id        Int       @id @default(autoincrement())
  value     String    @unique @db.VarChar(40)
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt DateTime  @updatedAt @map("updated_at") @db.Timestamp(0)
  services  Service[]

  @@map("categories")
}

model Appointment {
  id        Int      @id @default(autoincrement())
  startAt   DateTime @map("start_at")
  endAt     DateTime @map("end_at")
  user      User     @relation(fields: [userId], references: [id])
  userId    Int      @map("user_id")
  client    Client   @relation(fields: [clientId], references: [id])
  clientId  Int      @map("client_id")
  service   Service  @relation(fields: [serviceId], references: [id])
  serviceId Int      @map("service_id")

  @@map("appointment")
}

model WorkerService {
  id        Int     @id @default(autoincrement())
  user      User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    Int
  service   Service @relation(fields: [serviceId], references: [id], onDelete: Cascade)
  serviceId Int
  price     Int?

  @@map("worker_service")
}

model Specialty {
  id        Int      @id @default(autoincrement())
  name      String   @unique @db.VarChar(60)
  desc      String?  @db.VarChar(255)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamp(0)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamp(0)
  users     User[]

  @@map("specialty")
}

model BlackList {
  id    Int    @id @default(autoincrement())
  phone String @unique @db.VarChar(40)

  @@map("black_list")
}

model Token {
  refreshToken String   @id @unique @map("refresh_token") @db.VarChar(255)
  userId       Int      @map("user_id")
  expiredAt    DateTime @map("expired_at") @db.Timestamp(0)
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("tokens")
}

model Statistic {
  id            Int      @id @default(autoincrement())
  worker        String
  workerId      Int      @map("worker_id")
  service       String
  appointmentAt DateTime @map("appointment_at")
  clientName    String   @map("client_name")
  clientPhone   String   @map("client_phone")
  price         Int

  @@map("statistic")
}

enum Role {
  WORKER
  ADMIN
}
