//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id Int [pk, increment]
  username String [unique, not null]
  password String [not null]
  firstName String [not null]
  lastName String
  phone String [unique, not null]
  verified Boolean [not null, default: false]
  archived Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role Role [not null, default: 'WORKER']
  specialtyId Int
  specialty specialty
  appointments appointment [not null]
  workerService worker_service [not null]
  tokens tokens [not null]
}

Table client {
  id Int [pk, increment]
  phone String [unique, not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  blocked Boolean [not null, default: false]
  appointments appointment [not null]
}

Table services {
  id Int [pk, increment]
  name String [unique, not null]
  price Int [not null]
  desc String
  duration Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  category categories [not null]
  categoryId Int [not null]
  appointments appointment [not null]
  workerService worker_service [not null]
}

Table categories {
  id Int [pk, increment]
  value String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  services services [not null]
}

Table appointment {
  id Int [pk, increment]
  startAt DateTime [not null]
  endAt DateTime [not null]
  user user [not null]
  userId Int [not null]
  client client [not null]
  clientId Int [not null]
  service services [not null]
  serviceId Int [not null]
}

Table worker_service {
  id Int [pk, increment]
  user user [not null]
  userId Int [not null]
  service services [not null]
  serviceId Int [not null]
  price Int
}

Table specialty {
  id Int [pk, increment]
  name String [unique, not null]
  desc String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  users user [not null]
}

Table black_list {
  id Int [pk, increment]
  phone String [unique, not null]
}

Table tokens {
  refreshToken String [pk]
  userId Int [not null]
  expiredAt DateTime [not null]
  user user [not null]
}

Table statistic {
  id Int [pk, increment]
  worker String [not null]
  workerId Int [not null]
  service String [not null]
  appointmentAt DateTime [not null]
  clientName String [not null]
  clientPhone String [not null]
  price Int [not null]
}

Enum Role {
  WORKER
  ADMIN
}

Ref: user.specialtyId > specialty.id

Ref: services.categoryId > categories.id

Ref: appointment.userId > user.id

Ref: appointment.clientId > client.id

Ref: appointment.serviceId > services.id

Ref: worker_service.userId > user.id [delete: Cascade]

Ref: worker_service.serviceId > services.id [delete: Cascade]

Ref: tokens.userId > user.id [delete: Cascade]